Fix modal z-index bug

--- a/src/app/layout.module.scss
+++ b/src/app/layout.module.scss
@@ -5,6 +5,7 @@
     position: fixed;
     top: 50%;
     left: 50%;
+    z-index: 5;
     transform: translate(-50%, -50%); 
     width: 100%;
 }
