--- a/src/ui/components/3-organisms/SiteHeading/SiteHeading.module.scss
+++ b/src/ui/components/3-organisms/SiteHeading/SiteHeading.module.scss
@@ -7,7 +7,7 @@
     @include mq(md) {
         position: sticky;
         top: $header-height;
-        z-index: 3;
+        z-index: 1;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
