--- a/src/ui/components/4-habitats/Header/Header.module.scss
+++ b/src/ui/components/4-habitats/Header/Header.module.scss
@@ -11,7 +11,7 @@
     @include mq(md) {
         position: sticky;
         top: 0;
-        z-index: 3;
+        z-index: 1;
         padding: 0 $spacing--5;
 	}
     
